@@ -1,5 +1,6 @@
 Properly escape some parameters
 Add caching hack for aggressively caching browsers (e.g. links)
+Improve invalid filter handling + allow new line match with \n
 
 Version 1.16.3 - Apr. 14, 2016
 Fix warning on redirection of links without a scheme
